--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "copy-of-pixel-valentine",
+  "name": "pixel-valentine",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,15 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
-    "react": "^19.2.4",
+    "@google/genai": "^1.39.0",
     "lucide-react": "^0.563.0",
-    "@google/genai": "^1.39.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "canvas-confetti": "^1.6.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/canvas-confetti": "^1.6.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   }
 }
